--- a/index.html
+++ b/index.html
@@ -1,95 +1,185 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Чат с ботом</title>
- <style>
- body { font-family: Arial, sans-serif; }
- #chat { width: 300px; height: 400px; border: 1px solid #ccc; overflow-y: auto; padding: 10px; }
- #message { width: 300px; }
- .loading { opacity: 0.5; pointer-events: none; }
- </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Чат с ботом</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    #chat {
+      width: 300px;
+      height: 400px;
+      border: 1px solid #ccc;
+      overflow-y: auto;
+      padding: 10px;
+      margin-bottom: 10px;
+    }
+
+    #message {
+      width: 300px;
+    }
+
+    .loading {
+      opacity: 0.5;
+      pointer-events: none;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
- <div id="chat"></div>
- <input type="text" id="message" placeholder="Введите сообщение">
- <button onclick="sendMessage()">Отправить</button>
- <div id="loading" class="loading" style="display:none;">Загрузка...</div>
+  <div id="chat"></div>
+  <input type="text" id="message" placeholder="Введите сообщение" />
+  <button onclick="sendMessage()">Отправить</button>
+  <div id="loading" class="loading" style="display: none;">Загрузка...</div>
 
- <script>
- let isSending = false;
+  <script>
+    let isSending = false;
 
- async function sendMessage() {
- if (isSending) return;
- isSending = true;
- 
- const messageInput = document.getElementById('message');
- const chat = document.getElementById('chat');
- const loading = document.getElementById('loading');
- 
- loading.style.display = 'block';
- 
- const message = messageInput.value.trim();
- if (!message) {
- loading.style.display = 'none';
- isSending = false;
- return;
- }
+    async function sendMessage() {
+      if (isSending) return;
+      isSending = true;
 
- chat.innerHTML += `<div><strong>Вы:</strong> ${message}</div>`;
- chat.scrollTop = chat.scrollHeight;
- messageInput.value = '';
+      const messageInput = document.getElementById("message");
+      const chat = document.getElementById("chat");
+      const loading = document.getElementById("loading");
 
- try {
- const response = await fetch('https://webhook.nodul.ru/12738/dev/6cac2b2f-4a2e-4b04-bae1-a51581dbd78d', {
- method: 'POST',
- headers: {
- 'Content-Type': 'application/json'
- },
- body: JSON.stringify({ message: message })
- });
+      const message = messageInput.value.trim();
+      if (!message) {
+        loading.style.display = "none"; // Добавляем скрытие индикатора
+        isSending = false;
+        return;
+      }
 
- // Проверяем статус ответа
- if (!response.ok) {
- throw new Error(`Ошибка сервера: ${response.statusText} (код: ${response.status})`);
- }
+      loading.style.display = "block";
 
- // Получаем заголовки ответа для отладки
- const headers = Object.fromEntries(response.headers.entries());
- console.log('Заголовки ответа:', headers);
+      // Показываем сообщение пользователя
+      chat.innerHTML += `<div><strong>Вы:</strong> ${escapeHtml(message)}</div>`;
+      chat.scrollTop = chat.scrollHeight;
+      messageInput.value = "";
 
- // Сохраняем ответ в буфер
- const responseBuffer = await response.text();
- 
- // Проверяем, не пустой ли ответ
- if (!responseBuffer.trim()) {
- throw new Error('Пустой ответ от сервера');
- }
+      try {
+        const response = await fetch(
+          "https://webhook.nodul.ru/12738/dev/6cac2b2f-4a2e-4b04-bae1-a51581dbd78d",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ message: message }),
+          }
+        );
 
- let data;
- try {
- data = JSON.parse(responseBuffer);
- } catch (jsonError) {
- throw new Error(`Неверный формат ответа сервера: ${responseBuffer}`);
- }
+        // Добавляем проверку всех возможных ошибок
+        if (response.status >= 400) {
+          const errorData = await response.json().catch(() => ({
+            message: "Не удалось получить данные об ошибке"
+          }));
+          throw new Error(
+            `Ошибка сервера: ${response.statusText} (код: ${response.status}) - ${errorData.message}`
+          );
+        }
 
- // Проверяем наличие поля response в ответе
- if (!data || !data.response) {
- throw new Error('Ответ сервера не содержит ожидаемых данных');
- }
+        const responseText = await response.text();
 
- chat.innerHTML += `<div><strong>Бот:</strong> ${data.response}</div>`;
- chat.scrollTop = chat.scrollHeight;
- } catch (error) {
- console.error('Ошибка при общении с ботом:', error);
- chat.innerHTML += `<div><strong>Ошибка:</strong> ${error.message}</div>`;
- chat.scrollTop = chat.scrollHeight;
- } finally {
- loading.style.display = 'none';
- isSending = false;
- }
- }
- </script>
+        if (!responseText.trim()) {
+          throw new Error("Пустой ответ от сервера");
+        }
+
+        let data;
+        try {
+          data = JSON.parse(responseText);
+        } catch (jsonError) {
+          throw new Error(`Неверный формат ответа сервера: ${responseText}`);
+        }
+
+        if (!data || !data.response) {
+          throw new Error("Ответ сервера не содержит ожидаемых данных");
+        }
+
+        chat.innerHTML += `<div><strong>Бот:</strong> ${escapeHtml(
+          data.response
+        )}</div>`;
+        chat.scrollTop = chat.scrollHeight;
+      } catch (error) {
+        console.error("Ошибка при общении с ботом:", error);
+        chat.innerHTML += `<div><strong>Ошибка:</strong> ${escapeHtml(
+          error.message
+        )}</div>`;
+        chat.scrollTop = chat.scrollHeight;
+      } finally {
+        loading.style.display = "none";
+        isSending = false;
+      }
+    }
+
+   
+
+// Функция для экранирования HTML, чтобы избежать XSS
+function escapeHtml(text) {
+  const map = {
+    "&": "&amp;",
+    "<": "&lt;",
+    ">": "&gt;",
+    '"': "&quot;",
+    "'": "&#039;",
+  };
+  
+  // Добавляем обработку специальных символов
+  return text.replace(/[&<>"']/g, function(m) {
+    return map[m] || m;
+  });
+}
+
+// Добавляем функцию очистки чата при загрузке страницы
+window.addEventListener('load', function() {
+  const chat = document.getElementById('chat');
+  chat.innerHTML = '';
+});
+
+// Добавляем обработку нажатия Enter
+document.getElementById('message').addEventListener('keypress', function(e) {
+  if (e.key === 'Enter') {
+    sendMessage();
+  }
+});
+
+// Улучшаем обработку ошибок
+function handleError(error) {
+  console.error('Произошла ошибка:', error);
+  return {
+    message: error.message || 'Неизвестная ошибка',
+    status: error.status || 500
+  };
+}
+
+// Добавляем локальное хранение истории чата (опционально)
+function saveChatHistory(messages) {
+  localStorage.setItem('chatHistory', JSON.stringify(messages));
+}
+
+function loadChatHistory() {
+  const history = localStorage.getItem('chatHistory');
+  if (history) {
+    return JSON.parse(history);
+  }
+  return [];
+}
+
+// Добавляем таймер для предотвращения частых запросов
+let lastRequestTime = 0;
+const requestDelay = 1000; // минимум 1 секунда между запросами
+
+function canSendRequest() {
+  const now = Date.now();
+  if (now - lastRequestTime < requestDelay) {
+    return false;
+  }
+  lastRequestTime = now;
+  return true;
+}
+</script>
 </body>
 </html>
